--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "express-handlebars": "^5.3.3",
     "mysql2": "^2.3.0",
-    "sequelize": "^6.6.5",
+    "sequelize": "^6.30.0",
     "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {
